--- a/dhlSAlnew.html
+++ b/dhlSAlnew.html
@@ -1,4 +1,4 @@
-document.write(unescape('<html lang="en">
+<html lang="en">
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
